<resources>
    <string name="app_name">PersonalBanking</string>
    <string name="balance_history">Balance History</string>
    <string name="share_balance">Share Balance</string>
    <string name="cash_out">Cash Out</string>
    <string name="main_balance">Main Balance</string>
    <string name="add_balance">Add Balance</string>
    <string name="enter_your_e_mail">Enter your e-mail address</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">Dont have an account? SIGN UP</string>
    <string name="already_a_member_login">Already a member? LOGIN.</string>
    <string name="create_account">SIGN UP</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="todo">todo</string>
    <string name="verify_your_email_address">Verify Your Email Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_verification_massage_has_been_sent_to">A verification massage has been sent to</string>
    <string name="resend_verification_email">ReSend Verification Email</string>
    <string name="refresh">Refresh</string>
    <string name="just_check_your_email_and_follow_the_link_to_finish_creating_your_account_once_you_verify_your_email_address_you_ll_be_able_to_access_all_of_our_services">Just check your email and follow the link to finish creating your account.Once you verify your email address, you\'ll be able to access all of Our services.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_password_reset_email">Send Password Reset Request</string>
    <string name="cancel">Cancel</string>
    <string name="just_enter_registered_email_to_sent_you_password_reset_instructions">Just enter registered Email to sent you password reset instructions.</string>
    <string name="back_to_login_section">Back to Login section</string>

    <string name="signup">SignUp</string>
    <string name="enter_userNme">User Name</string>
    <string name="profrssion">Profession</string>
    <string name="enter_Dob">Date of Birth</string>
    <string name="enter_NID">Enter your NID number</string>
    <string name="enter_phn">Enter your contact number</string>
    <string name="txt_home">Home</string>
    <string name="txt_new_account">New Account Request</string>
    <string name="txt_view_details">View Account Details</string>
    <string name="txttransaction">View Transactions</string>
    <string name="txt_add_money">Add Money</string>
    <string name="txt_transfer_money">Transfer Money</string>
    <string name="txt_cash_out">Cash Out</string>
    <string name="txt_reset">Reset Password</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="txt_acc_type">Account Type</string>
    <string name="txt_select_branch">Select Branch</string>
    <string name="txt_acc_number">Account Number</string>
    <string name="txt_current_balance">Current Balance</string>
    <string name="txt_nid">NID</string>
    <string name="txt_logout">LogOut</string>
</resources>
