<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".accounceSection.home.AccounceHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_balance"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mer_10dp"
            android:text="@string/main_balance" />

        <Button
            android:id="@+id/cash_out"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mer_10dp"
            android:text="@string/cash_out" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/share_balance"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mer_10dp"
            android:text="@string/share_balance" />

        <Button
            android:id="@+id/transaction_history"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mer_10dp"
            android:text="@string/balance_history" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|top">

        <Button
            android:id="@+id/add_balance"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mer_10dp"
            android:text="@string/add_balance" />

    </LinearLayout>

</LinearLayout>