<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/fgp_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/forgotpassicon"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/fgp_txt"
        android:layout_below="@+id/fgp_icon"
        style="@style/title_Reset"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
         />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_below="@+id/fgp_txt"
        android:id="@+id/reset_email"
        style="@style/reset_email"
        android:hint="@string/enter_your_e_mail"
       />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_below="@+id/reset_email"
        android:layout_toStartOf="@+id/reSend"
        style="@style/cancel_reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reSend"
        android:layout_below="@+id/reset_email"
        android:layout_alignParentEnd="true"
        style="@style/resetBtn"
        android:text="@string/send_password_reset_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</RelativeLayout>