<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="108dp"
            android:layout_height="66dp"
            android:contentDescription="TODO"
            android:src="@drawable/personalbanking" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">


        <LinearLayout style="@style/loginsinguplbl">

            <TextView
                style="@style/login_signup_tv"
                android:text="@string/signup" />

            <View style="@style/view_style" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            android:orientation="vertical"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding">

            <!-- User Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor"
                android:hint="@string/enter_userNme"
                android:typeface="monospace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_userName"
                    style="@style/UseNameFieldField"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Profession -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor"
                android:typeface="monospace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_uprofession"
                    style="@style/UseNameFieldField"
                    android:hint="@string/profrssion"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- User DOB -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor"
                android:typeface="monospace"
                android:inputType="number"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:focusable="true"
                android:maxLines="1"
                android:importantForAutofill="no"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_uDob"
                    style="@style/UseNameFieldField"
                    android:hint="@string/enter_Dob"
                    android:textColor="@color/textcolor"
                    android:inputType="number"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:focusable="true"
                    android:maxLines="1"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

                       <!-- User NID -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor"
                android:typeface="monospace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nid"
                    style="@style/UseNumberField"
                    android:hint="@string/enter_NID"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Mobil No. -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor"
                android:typeface="monospace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phn_no"
                    style="@style/UseNumberField"
                    android:hint="@string/enter_phn"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--  Email Label -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor"
                android:typeface="monospace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/EmailField"
                    android:hint="@string/enter_your_e_mail"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>



            <!-- password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lvlColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/PasswordField"
                    android:hint="@string/password"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--  Button CreateBtn -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Registration"
                style="@style/Loginbtn"
                android:layout_marginTop="16dp"
                android:text="@string/create_account"
                app:cornerRadius="80dp" />

            <!--  Button Login -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/already_a_member_login"
                android:textAllCaps="false"
                android:textColor="@color/texthintColor"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>