<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="108dp"
            android:layout_height="66dp"
            android:src="@drawable/personalbanking"
            android:contentDescription="TODO" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout style="@style/loginsinguplbl">
            <TextView
                android:text="Login"
                style="@style/login_signup_tv" />
            <View style="@style/view_style" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:padding = "@dimen/large_padding">
            <!--  Email Label -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:typeface="monospace"
                android:textColorHint="#33515159">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/EmailField"
                    android:textColor="@color/textcolor"
                    android:hint="@string/enter_your_e_mail" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#33515159">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/PasswordField"
                    android:textColor="@color/textcolor"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/link_reset"
                android:text="@string/forgot_password"
                app:backgroundTint="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/texthintColor"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                />

            <!--  Button login -->
            <!--  Button NewAccount -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Loginbtn"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                app:cornerRadius="80dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/link_signUp"
                style="@style/createNewAccBtn"
                android:text="@string/no_account_yet_create_one" />



        </LinearLayout>
    </LinearLayout>



    <!--<ImageView
        style="@style/LogoStyle"
        android:contentDescription="@string/todo"
        />-->


</LinearLayout>