<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_view"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#B393EC"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.Design.NoActionBar"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <ImageView
                android:id="@+id/iv_userimage_drawer"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="17dp"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_person_black_24dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:id="@+id/tv_username_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="35dp"
                android:layout_toEndOf="@id/iv_userimage_drawer"
                android:layout_toRightOf="@id/iv_userimage_drawer"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_user_address_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username_drawer"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@id/iv_userimage_drawer"
                android:layout_toRightOf="@id/iv_userimage_drawer"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_userinfo"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_home_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_home"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_home"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_create_new_folder_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_new_account"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_view_account_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_new_account"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_details_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/txt_view_details"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_view_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_view_account_details"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_compare_arrows_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txttransaction"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_add_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_view_transaction"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_add_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_add_money"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_transfer_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_add_money"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_transfer_within_a_station_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_transfer_money"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_cash_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_transfer_money"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_call_missed_outgoing_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_cash_out"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_drawer_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_drawer_cash_out"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_refresh_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_reset"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.navigation.NavigationView>